--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,3 +2,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.blog-content p {
+  margin-bottom: 1rem;
+  line-height: 1.8rem;
+  margin-right: -14px;
+  padding-right: 14px;
+  margin-left: -14px;
+  padding-left: 14px;
+}
