--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -121,3 +121,75 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: sahel;
+  src: url('fonts/sahel/Sahel-Light.woff2') format('woff2');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: sahel;
+  src: url('fonts/sahel/Sahel-Light.woff2') format('woff2');
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: sahel;
+  src: url('fonts/sahel/Sahel-Light.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: sahel;
+  src: url('fonts/sahel/Sahel.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: sahel;
+  src: url('fonts/sahel/Sahel-SemiBold.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: sahel;
+  src: url('fonts/sahel/Sahel-SemiBold.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: sahel;
+  src: url('fonts/sahel/Sahel-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: sahel;
+  src: url('fonts/sahel/Sahel-Bold.woff2') format('woff2');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: sahel;
+  src: url('fonts/sahel/Sahel-Black.woff2') format('woff2');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
