--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -71,7 +71,7 @@
 
 @font-face {
   font-family: vazirmatn-rd;
-  src: url('fonts/webfonts/Vazirmatn-RD-Thin.woff2') format('woff2');
+  src: url('../fonts/webfonts/Vazirmatn-RD-Thin.woff2') format('woff2');
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -79,7 +79,7 @@
 
 @font-face {
   font-family: vazirmatn-rd;
-  src: url('fonts/webfonts/Vazirmatn-RD-ExtraLight.woff2') format('woff2');
+  src: url('../fonts/webfonts/Vazirmatn-RD-ExtraLight.woff2') format('woff2');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -87,7 +87,7 @@
 
 @font-face {
   font-family: vazirmatn-rd;
-  src: url('fonts/webfonts/Vazirmatn-RD-Light.woff2') format('woff2');
+  src: url('../fonts/webfonts/Vazirmatn-RD-Light.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -95,7 +95,7 @@
 
 @font-face {
   font-family: vazirmatn-rd;
-  src: url('fonts/webfonts/Vazirmatn-RD-Regular.woff2') format('woff2');
+  src: url('../fonts/webfonts/Vazirmatn-RD-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -103,7 +103,7 @@
 
 @font-face {
   font-family: vazirmatn-rd;
-  src: url('fonts/webfonts/Vazirmatn-RD-Medium.woff2') format('woff2');
+  src: url('../fonts/webfonts/Vazirmatn-RD-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -111,7 +111,7 @@
 
 @font-face {
   font-family: vazirmatn-rd;
-  src: url('fonts/webfonts/Vazirmatn-RD-SemiBold.woff2') format('woff2');
+  src: url('../fonts/webfonts/Vazirmatn-RD-SemiBold.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -119,7 +119,7 @@
 
 @font-face {
   font-family: vazirmatn-rd;
-  src: url('fonts/webfonts/Vazirmatn-RD-Bold.woff2') format('woff2');
+  src: url('../fonts/webfonts/Vazirmatn-RD-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -127,7 +127,7 @@
 
 @font-face {
   font-family: vazirmatn-rd;
-  src: url('fonts/webfonts/Vazirmatn-RD-ExtraBold.woff2') format('woff2');
+  src: url('../fonts/webfonts/Vazirmatn-RD-ExtraBold.woff2') format('woff2');
   font-weight: 800;
   font-style: normal;
   font-display: swap;
@@ -135,7 +135,7 @@
 
 @font-face {
   font-family: vazirmatn-rd;
-  src: url('fonts/webfonts/Vazirmatn-RD-Black.woff2') format('woff2');
+  src: url('../fonts/webfonts/Vazirmatn-RD-Black.woff2') format('woff2');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -143,7 +143,7 @@
 
 @font-face {
   font-family: sahel;
-  src: url('fonts/sahel/Sahel-Light.woff2') format('woff2');
+  src: url('../fonts/sahel/Sahel-Light.woff2') format('woff2');
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -151,7 +151,7 @@
 
 @font-face {
   font-family: sahel;
-  src: url('fonts/sahel/Sahel-Light.woff2') format('woff2');
+  src: url('../fonts/sahel/Sahel-Light.woff2') format('woff2');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -159,7 +159,7 @@
 
 @font-face {
   font-family: sahel;
-  src: url('fonts/sahel/Sahel-Light.woff2') format('woff2');
+  src: url('../fonts/sahel/Sahel-Light.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -167,7 +167,7 @@
 
 @font-face {
   font-family: sahel;
-  src: url('fonts/sahel/Sahel.woff2') format('woff2');
+  src: url('../fonts/sahel/Sahel.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -175,7 +175,7 @@
 
 @font-face {
   font-family: sahel;
-  src: url('fonts/sahel/Sahel-SemiBold.woff2') format('woff2');
+  src: url('../fonts/sahel/Sahel-SemiBold.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -183,7 +183,7 @@
 
 @font-face {
   font-family: sahel;
-  src: url('fonts/sahel/Sahel-SemiBold.woff2') format('woff2');
+  src: url('../fonts/sahel/Sahel-SemiBold.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -191,7 +191,7 @@
 
 @font-face {
   font-family: sahel;
-  src: url('fonts/sahel/Sahel-Bold.woff2') format('woff2');
+  src: url('../fonts/sahel/Sahel-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -199,7 +199,7 @@
 
 @font-face {
   font-family: sahel;
-  src: url('fonts/sahel/Sahel-Bold.woff2') format('woff2');
+  src: url('../fonts/sahel/Sahel-Bold.woff2') format('woff2');
   font-weight: 800;
   font-style: normal;
   font-display: swap;
@@ -207,7 +207,7 @@
 
 @font-face {
   font-family: sahel;
-  src: url('fonts/sahel/Sahel-Black.woff2') format('woff2');
+  src: url('../fonts/sahel/Sahel-Black.woff2') format('woff2');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
