--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,15 @@
 @import './base.css';
 
+.v-enter-active,
+.v-leave-active {
+  transition: opacity 0.8s ease;
+}
+
+.v-enter-from,
+.v-leave-to {
+  opacity: 0;
+}
+
 .blog-content p {
   font-size: 1rem;
   margin-bottom: 0.6rem;
