--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -16,6 +16,12 @@
 
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
+  --c-bg-light-1: #ffffff;
+  --c-bg-dark-1: #000000;
+
+  --c-text-light-1: #000000;
+  --c-text-dark-1: #ffffff;
+
   --site-text-color-2: '#ea0303';
   /* --site-text-color-2: '#656d75'; */
 
@@ -42,7 +48,10 @@
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-white);
+  --color-background: var(--c-bg-light-1);
+  --color-text: var(--c-text-light-1);
+
+  /*  */
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
 
@@ -50,12 +59,16 @@
   --color-border-hover: var(--vt-c-divider-light-1);
 
   --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
 
   --section-gap: 160px;
 }
 
-@media (prefers-color-scheme: dark) {
+:root .dark {
+  --color-background: var(--c-bg-dark-1);
+  --color-text: var(--c-text-dark-1);
+}
+
+/* @media (prefers-color-scheme: dark) {
   :root {
     --color-background: var(--vt-c-black);
     --color-background-soft: var(--vt-c-black-soft);
@@ -67,7 +80,7 @@
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
   }
-}
+} */
 
 @font-face {
   font-family: vazirmatn-rd;
