--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -63,24 +63,27 @@
   --section-gap: 160px;
 }
 
-:root .dark {
+html.dark {
   --color-background: var(--c-bg-dark-1);
   --color-text: var(--c-text-dark-1);
 }
 
 /* @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
+    --color-background: var(--c-bg-dark-1);
+    --color-text: var(--c-text-dark-1);
   }
 } */
+
+
+/* :root .dark {
+  color-scheme: dark;
+}
+
+:root .light {
+  color-scheme: light;
+} */
+
 
 @font-face {
   font-family: vazirmatn-rd;
