feat: add comment list box

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -29,7 +29,7 @@
   --c-text-light-3: #1f2667;
   --c-text-light-4: #000000;
   --c-text-dark-1: rgb(229, 231, 235);
-  --c-text-dark-2: #848d97;
+  --c-text-dark-2: #929ca8;
   --c-text-dark-3: #f6f8fa;
   --c-text-dark-4: #ffffff;
 
