--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -102,6 +102,16 @@ html.dark {
   }
 } */
 
+html {
+  font-size: 16px;
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 18px;
+  }
+}
+
 div,
 code,
 pre,
